k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartfridge-depl
  namespace: 5team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smartfridge
  template:
    metadata:
      labels:
        app: smartfridge
    spec:
      containers:
      - name: smartfridge-container
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/5team/smartfridge:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: smartfridge-service
  namespace: 5team
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: smartfridge
